tests/test_assets/semantic/invalid/mutation/compound_target_type.cog
Color :: enum {
    Red,
    Green,
}

bool_target::() -> void {
    value: bool = true;
    value += 1;
}

enum_target::() -> void {
    color: Color = Color.Red;
    color += 1;
}