tests/test_assets/semantic/invalid/mutation/compound_target_type.expected
semantic error at line 8: compound assignment target must be numeric
semantic error at line 13: compound assignment target must be numeric
2 semantic errors generated.
